Fixed bug on mobile

--- a/_sass/main.sass
+++ b/_sass/main.sass
@@ -93,8 +93,9 @@ article
   transition: color 5s fade-in
   p
     line-height: 2em
-    margin-left: 7em
-    margin-right: 7em
+.kiosk article p
+  margin-left: 7em
+  margin-right: 7em
 header
   text-transform: uppercase
 aside
